# zmk-dongle-screen2

./: CMakeLists.txt  README.md
boards/shields/dongle_screen/: CMakeLists.txt  Kconfig.defconfig  dongle_screen.overlay
boards/shields/dongle_screen/boards/: nice_nano_v2.overlay  seeeduino_xiao_ble.overlay
boards/shields/dongle_screen/include/: fonts.h
boards/shields/dongle_screen/src/: custom_status_screen.c
boards/shields/dongle_screen/src/fonts/: NerdFontMono_Regular_10.c
boards/shields/dongle_screen/src/widgets/: battery_status.c  latency_status.c  latency_status.h  layer_status.c  mod_status.c  output_status.c  wpm_status.c
drivers/display/: CMakeLists.txt  display_ssd1351.c  display_ssd1351.h
dts/bindings/display/: zmk,ssd1351.yaml
include/dongle_screen/latency/: metrics.h
src/latency/: CMakeLists.txt  metrics_core.c  metrics_display.c  metrics_transport.c  metrics_wrappers.c
zephyr/: module.yml
